some oom tests