@@ -1,4 +1,4 @@
-package gc;
+package oom;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -7,14 +7,15 @@ import java.util.List;
  * @author Kevin
  * @description
  * @date 2017/2/22
+ * JDK1.6 VM Args:-XX:PermSize=10M -XX:MaxPermSize=10M
  */
-public class StaticOverflowTest {
+public class RuntimeConstantPoolOOMTest {
 
     public static void main(String[] args) {
         List<String> list = new ArrayList<String>();
-        int i = 0;
-        while (true ){
-            list.add(String. valueOf(i++).intern());
+        long i = 0;
+        while (true) {
+            list.add(String.valueOf(i++).intern());
         }
     }
 }
